--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -1,33 +1,33 @@
 
 @font-face {
     font-family: hackers;
-    src: url("src/assets/fonts/hackers.ttf") format("truetype");
+    src: url("hackers.ttf") format("truetype");
 }
 @font-face {
     font-family: caviar;
-    src: url("src/assets/fonts/CaviarDreams.ttf") format("truetype");
+    src: url("CaviarDreams.ttf") format("truetype");
 }
 @font-face {
     font-family: crown;
-    src: url("src/assets/fonts/IntellectaCrowns.ttf") format("truetype");
+    src: url("IntellectaCrowns.ttf") format("truetype");
 }
 @font-face {
     font-family: mouse;
-    src: url("src/assets/fonts/Mouse.ttf") format("truetype");
+    src: url("Mouse.ttf") format("truetype");
 }
 @font-face {
     font-family: black-list;
-    src: url("src/assets/fonts/The Blacklist.ttf") format("truetype");
+    src: url("The Blacklist.ttf") format("truetype");
 }
 @font-face {
     font-family: black-clover;
-    src: url("src/assets/fonts/Black Clover Font.ttf") format("truetype");
+    src: url("Black Clover Font.ttf") format("truetype");
 }
 @font-face {
     font-family: cherolina;
-    src: url("src/assets/fonts/Cherolina.ttf") format("truetype");
+    src: url("Cherolina.ttf") format("truetype");
 }
 @font-face {
     font-family: fire;
-    src: url("src/assets/fonts/fire.ttf") format("truetype");
+    src: url("fire.ttf") format("truetype");
 }
