--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -111,28 +111,28 @@
               <div class="row">
                 <div class="col-md-8">
 
-                  <div class="presentation-box" style="overflow-y: scroll;">
+                  <div class="presentation-box" style="overflow-y: scroll;" >
 
                     <!-- POST_REPEATER -->
                     <div class="row post-it-container" [ngStyle]="{'max-width': myMaxWith }" cdkDropList
                       [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
 
-                      <mat-card style="width: 300px;margin: 5px;height: 310px;background-color: lightgoldenrodyellow;"
+                      <mat-card class="mat-elevation-z4" style="width: 300px;margin: 5px;height: 310px;background-color: lightgoldenrodyellow;"
                         cdkDrag cdkDragLockAxis="xy" *ngFor="let item of conceptData.concepts; let i = index;">
 
                         <!-- TITLE -->
-
+                        <mat-card-title>
                         <div
                           style="background-color: lightgoldenrodyellow;height: 60px;overflow-x: hidden;width: 283px;word-break: break-all;">
                           <div class="mat-h2">{{item.concept}}</div>
                         </div>
-
+                      </mat-card-title>
 
                         <!-- HTML-CONTENT -->
 
                         <mat-card-content
                           style="width: 283px;height: 160px; overflow-y: scroll;background-color: lightgoldenrodyellow; overflow-x: hidden;">
-                          <div [innerHTML]="item.html">{{item.html}}</div>
+                          <div [innerHTML]="item.html"></div>
                         </mat-card-content>
 
                         <mat-card-actions fxLayoutAlign="end end">
