--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -86,7 +86,8 @@
   background-image: url(../../assets/img/toolbarBg.jpg);
   height: 53px;
   position: absolute;
-  top: 4px;
+  top: 74px;
+  left: 95px;
   width: 954px;
   z-index: 9999;
   border-radius: 5px;
@@ -111,7 +112,8 @@
 
 .names-container {
   background-color: white;
-  width: 293px;
+  width: 314px;
+  max-width: 313px;
   height: 630px;
   position: relative;
   right: 8px;
@@ -353,7 +355,7 @@ mat-slider {
 .new-names-card {
   max-width: 350px;
   min-width: 270px;
-  max-height: 341px;
+  max-height: 501px;
   border-radius: 8px;
   border: 2px solid;
   background: #fff;
@@ -364,10 +366,11 @@ mat-slider {
 .checkButtonEditor {
   color: white;
   position: fixed;
-  bottom: 192px;
+  bottom: 145px;
   background-color: green;
   padding: 4px;
   outline: none;
+  right: 400px;
 }
 
 .shrinkCard {
