--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -169,39 +169,39 @@
         </div>
     </div>
 
-    <div *ngIf="!infoMessage && !isMobileInfo" >
-    <form name="loginForm" [formGroup]="loginForm" novalidate class="">
-        <!-- EDITOR CARD -->
-        <div class="container" fxLayout="column" fxLayoutAlign="center center">
-            <div class="row ">
-                <div class="col">
-                    <div class="title-card">
+    <div *ngIf="!infoMessage && !isMobileInfo">
+        <form name="loginForm" [formGroup]="loginForm" novalidate class="">
+            <!-- EDITOR CARD -->
+            <div class="container" fxLayout="column" fxLayoutAlign="center center">
+                <div class="row ">
+                    <div class="col">
+                        <div class="title-card">
 
-                        <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
-                            fxLayoutAlign="start center">
-                            <!-- <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/Christy.jpg"> -->
+                            <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
+                                fxLayoutAlign="start center">
+                                <!-- <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/Christy.jpg"> -->
 
-                            <mat-icon style="margin-right: 10px;">assignment</mat-icon>
-                            <h2 class="text-bold ">CONCEPT TITLE</h2>
+                                <mat-icon style="margin-right: 10px;">assignment</mat-icon>
+                                <h2 class="text-bold ">CONCEPT TITLE</h2>
 
-                            <!-- <div class="ml-16">
+                                <!-- <div class="ml-16">
                             <div class="h5 text-bold secondary-text">20 mins. ago</div>
                         </div> -->
-                        </div>
+                            </div>
 
 
-                        <div fxLayoutAlign="center center">
+                            <div fxLayoutAlign="center center">
 
-                            <mat-form-field *ngIf="!isDeleting" appearance="outline" style="width: 900px">
-                                <!-- <mat-label>CONCEPT</mat-label> -->
-                                <input matInput type="Concept" placeholder="Concept" formControlName="name">
-                            </mat-form-field>
-                        </div>
-
-
+                                <mat-form-field *ngIf="!isDeleting" appearance="outline" style="width: 900px">
+                                    <!-- <mat-label>CONCEPT</mat-label> -->
+                                    <input matInput type="Concept" placeholder="Concept" formControlName="name">
+                                </mat-form-field>
+                            </div>
 
 
-                        <!-- <img src="assets/images/cards/card1.jpg">
+
+
+                            <!-- <img src="assets/images/cards/card1.jpg">
                 
                     <div class="p-16">
                         <div class="h1">Kangaroo Valley Safari</div>
@@ -213,81 +213,72 @@
                         their content and quantity can vary greatly.
                     </div> -->
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col">
-                    <div class="ckeditor-card">
+                <div class="row">
+                    <div class="col">
+                        <div class="ckeditor-card">
 
 
-                        <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
-                            fxLayoutAlign="start center">
-                            <!-- <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/Christy.jpg"> -->
+                            <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
+                                fxLayoutAlign="start center">
+                                <!-- <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/Christy.jpg"> -->
 
-                            <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
-                            <h2 class="text-bold ">Key Words and Concepts</h2>
+                                <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
+                                <h2 class="text-bold ">Key Words and Concepts</h2>
 
-                            <!-- <div class="ml-16">
+                                <!-- <div class="ml-16">
                             <div class="h5 text-bold secondary-text">20 mins. ago</div>
                         </div> -->
-                        </div>
+                            </div>
 
-                        <!-- <ckeditor #child [data]="dataEditor" (ready)="onReady($event)"
+                            <!-- <ckeditor #child [data]="dataEditor" (ready)="onReady($event)"
                             [ngModelOptions]="{standalone: true}" [(ngModel)]="model.editorData" class="ckeditorcev"
                             [config]="ckconfig"></ckeditor> -->
                             <!-- <ckeditor [editor]="Editor" [data]="dataEditor" (ready)="onReady($event)"
                             [(ngModel)]="model.editorData"   [config]="ckconfig"></ckeditor> -->
-                            <ckeditor class="ckeditorcev" [ngModelOptions]="{standalone: true}" 
-                             [(ngModel)]="model.editorData" [data]="dataEditor" [config]="ckconfig"></ckeditor>
+                            <ckeditor class="ckeditorcev" [ngModelOptions]="{standalone: true}"
+                                [(ngModel)]="model.editorData" [data]="dataEditor" [config]="ckconfig"></ckeditor>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="new-names-card " style="overflow: hidden;">
+
+
+                            <div class="p-16" style="color: #004684;padding: 5px;" fxLayout="row"
+                                fxLayoutAlign="start center">
+                                <h2 class="text-bold ">New Names</h2>
+                            </div>
+
+                            <div class="p-16" style="color: #004684;padding: 10px;height: 780px;" fxLayout="row"
+                                fxLayoutAlign="start center">
+                                <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
+                                    cdkAutosizeMaxRows="23" style="
+                              height: 460px;
+                              width: 248px;
+                              position: absolute;
+                              top: 40px;" appearance="outline" formControlName="suma"></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+
                 <div class="col">
-                    <div class="new-names-card " style="overflow: hidden;">
-
-
-                        <div class="p-16" style="color: #004684;padding: 5px;" fxLayout="row"
-                            fxLayoutAlign="start center">
-                            <!-- <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/Christy.jpg"> -->
-
-                            <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
-                            <h2 class="text-bold " style="">New Names</h2>
-
-                            <!-- <div class="ml-16">
-                            <div class="h5 text-bold secondary-text">20 mins. ago</div>
-                        </div> -->
-                        </div>
-
-                        <div class="p-16" style="color: #004684;padding: 10px;" fxLayout="row"
-                            fxLayoutAlign="start center">
-                            <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
-                                cdkAutosizeMaxRows="23" style="padding: 8px;
-                                height: 180px;
-                                border: solid blue !important;
-                                min-height: 280px;
-                                max-height: 321px;
-                                position: relative;
-                                top: -20px;" appearance="outline" formControlName="suma"></textarea>
-                        </div>
+                    <div fxLayoutAlign="end end">
+                        <button (click)="buttonOption('savePost')" class="checkButtonEditor" mat-fab color="success"
+                            aria-label="icon">
+                            <mat-icon>check</mat-icon>
+                        </button>
                     </div>
                 </div>
+
             </div>
 
-
-            <div class="col">
-                <div fxLayoutAlign="end end">
-                    <button (click)="buttonOption('savePost')" class="checkButtonEditor" mat-fab color="success"
-                        aria-label="icon">
-                        <mat-icon>check</mat-icon>
-                    </button>
-                </div>
-            </div>
-
-        </div>
-
-    </form>
-</div>
+        </form>
+    </div>
 </div>
 
 <!-- 
