--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -117,32 +117,32 @@
                     <div class="row post-it-container" [ngStyle]="{'max-width': myMaxWith }" cdkDropList
                       [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
 
-                      <mat-card class="mat-elevation-z4" style="width: 300px;margin: 5px;height: 310px;background-color: lightgoldenrodyellow;"
+                      <mat-card class="mat-elevation-z4 post-card"  (click)="openDialog(item, 'edit')"                         
                         cdkDrag cdkDragLockAxis="xy" *ngFor="let item of conceptData.concepts; let i = index;">
 
                         <!-- TITLE -->
                         <mat-card-title>
-                        <div
-                          style="height: 50px;overflow-x: hidden;width: 283px;word-break: break-all;">
-                          <div class="mat-h2">{{item.concept}}</div>
+                        <div class="post-title">
+                          <div class="mat-h2" style="line-height: 100%;">{{item.concept}}</div>
                         </div>
                       </mat-card-title>
 
                         <!-- HTML-CONTENT -->
 
                         <mat-card-content
-                          style="width: 283px;height: 160px; overflow-y: scroll;background-color: lightgoldenrodyellow; overflow-x: hidden;">
+                          style="cursor: pointer;width: 263px;height: 160px; overflow-y: scroll; overflow-x: hidden;">
                           <div [innerHTML]="item.html"></div>
                         </mat-card-content>
 
                         <mat-card-actions fxLayoutAlign="end end">
-                          <button (click)="openDialog(item, 'edit')" mat-mini-fab class="post-button" color="primary">
+                          <!-- <button mat-mini-fab class="post-button" color="primary">
                             <mat-icon style="font-size: 18px;">create</mat-icon>
-                          </button>
-                          <button (click)="openDialog(item, 'delete')" mat-mini-fab class="post-button" color="primary">
-                            <mat-icon style="font-size: 19px;
-                            position: inherit;">cancel</mat-icon>
-                          </button>
+                          </button> -->
+                          <mat-icon (click)="openDialog(item, 'delete')" style="font-size: 19px;
+                          position: absolute;
+                          right: -4px;
+                          cursor: pointer;
+                          bottom: -10px;">cancel</mat-icon>
                         </mat-card-actions>
 
                       </mat-card>
