--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -1,3 +1,43 @@
+
+
+@mixin BoxShadow ($dp) {
+  @if $dp==0 {
+      box-shadow: none
+  }
+  @else if $dp==1 {
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12), 0 1px 3px 0 rgba(0, 0, 0, .20)
+  }
+  @else if $dp==2 {
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .12), 0 1px 5px 0 rgba(0, 0, 0, .20)
+  }
+  @else if $dp==3 {
+      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .12), 0 1px 8px 0 rgba(0, 0, 0, .20)
+  }
+  @else if $dp==4 {
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==6 {
+      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==8 {
+      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==9 {
+      box-shadow: 0 9px 12px 1px rgba(0, 0, 0, .14), 0 3px 16px 2px rgba(0, 0, 0, .12), 0 5px 6px -3px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==12 {
+      box-shadow: 0 12px 17px 2px rgba(0, 0, 0, .14), 0 5px 22px 4px rgba(0, 0, 0, .12), 0 7px 8px -4px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==16 {
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .20)
+  }
+  @else if $dp==24 {
+      box-shadow: 0 24px 38px 3px rgba(0, 0, 0, .14), 0 9px 46px 8px rgba(0, 0, 0, .12), 0 11px 15px -7px rgba(0, 0, 0, .20)
+  }
+}
+
+
+ 
 .presentation-box {
   width: 961px;
   height: 714px;
@@ -9,7 +49,18 @@
   top: 70px;
   right: -76px;
   overflow: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
 }
+.presentation-box {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.presentation-box::-webkit-scrollbar {
+  display: none;
+}
+
 
 .slide-box {
   width: 968px;
@@ -107,7 +158,7 @@
 .post-it-container {
   margin: 3px;
   position: relative;
-  top: 52px;
+  top: 62px;
 }
 
 .names-container {
@@ -122,6 +173,13 @@
   overflow-y: scroll;
   padding: 10px;
 }
+.names-container::-webkit-scrollbar {
+  display: none;
+}
+.names-container2 ::-webkit-scrollbar {
+  display: none;
+}
+
 .names-container2 {
   background-color: white;
   width: 625px;
@@ -135,6 +193,10 @@
   padding: 10px;
 }
 
+.names-container3 ::-webkit-scrollbar {
+  display: none;
+}
+
 .names-container3 {
   background-color: white;
   width: 0px;
@@ -146,6 +208,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 10px;
+
 }
 
 .post-list {
@@ -216,23 +279,17 @@
 }
 
 .name-form {
-  position: absolute;
-  bottom: 4px;
-  width: 254px;
-  background-color: white;
+  position: fixed;
+    bottom: 213px;
+    width: 276px;
+    background-color: white;
+    height: 90px;
+    border-radius: 12px;
+    // border: #004684 solid 2px;
+    padding: 20px;
 }
 
-:host ::ng-deep .ck-editor__editable_inline {
-  max-height: 900px;
-  min-height: 500px;
-  max-height: 680px;
-  height: 500px;
-}
 
-:host ::ng-deep {
-  // display: block;
-  // height: 200px;
-}
 
 .box {
   display: flex;
@@ -267,7 +324,7 @@
 mat-slider {
   width: 600px;
   position: fixed;
-  top: 109px;
+  top: 115px;
   z-index: 99;
   right: 455px;
   color: lawngreen;
@@ -407,19 +464,19 @@ $postItHeaderColorsLength: length($postItHeaderColors);
     }
   }
 }
-.post-card {
-  @for $i from 1 through $postItBodyColorsLength {
-    &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .shrink-card {
-      background-color: nth($postItBodyColors, $i);
-    }
-    &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .shrink-card-content {
-      background-color: nth($postItBodyColors, $i);
-    }
-    &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .shrink-card-color {
-      background-color: nth($postItBodyColors, $i);
-    }
-  }
-}
+// .post-it-container {
+//   @for $i from 1 through $postItBodyColorsLength {
+//     &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .post-card{
+//       background-color: nth($postItBodyColors, $i);
+//     }
+//     &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .post-card{
+//       background-color: nth($postItBodyColors, $i);
+//     }
+//     &:nth-of-type(#{$postItBodyColorsLength}n + #{$i}) .post-card{
+//       background-color: nth($postItBodyColors, $i);
+//     }
+//   }
+// }
 
 .mwlResizable {
   box-sizing: border-box; // required for the enableGhostResize option to work
@@ -431,18 +488,22 @@ $postItHeaderColorsLength: length($postItHeaderColors);
   height: 280px;
   background-color: #d6f8fd;
   overflow: hidden;
-
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
 }
 
 .post-card:hover {
-  width: 295px;
-  // margin: 15px;
-  height: 295px;
+  // width: 295px;
+  // height: 295px;
   // background-color: #0bcdeb;
-  animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 0.5s; 
-  z-index: 999999;
+  // animation: bounceIn; /* referring directly to the animation's @keyframe declaration */
+  // animation-duration: 0.5s; 
+  // z-index: 999999;
+  @include BoxShadow(12);
+  // box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12), 0 1px 3px 0 rgba(0, 0, 0, .20);
+
 }
+
 
 .post-title {
   height: auto;
@@ -450,13 +511,40 @@ $postItHeaderColorsLength: length($postItHeaderColors);
   width: 253px;
   word-break: break-all;
   cursor: grab;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
 }
 
 .post-title:hover {
-  height: auto;
-  width: 253px;
-  word-break: break-all;
+  // height: auto;
+  // width: 253px;
+  // word-break: break-all;
+  // cursor: pointer;
+}
+
+
+.post-content {
   cursor: pointer;
+  width: 263px;
+  height: 260px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.post-content::-webkit-scrollbar {
+  display: block;
+}
+
+.post-content:hover {
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+  // height: auto;
+  // width: 253px;
+  // word-break: break-all;
+  // cursor: pointer;
 }
 
 // Resizable options
@@ -487,7 +575,7 @@ $postItHeaderColorsLength: length($postItHeaderColors);
 .bounceOut {
   display: inline-block;
   margin: 0 0.5rem;
-
+  // overflow: scroll;
   animation: shakeX; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 0.1s; /* don't forget to set a duration! */
 }
@@ -506,3 +594,4 @@ $postItHeaderColorsLength: length($postItHeaderColors);
   animation: shakeX; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 0.1s; /* don't forget to set a duration! */
 }
+
