--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -117,7 +117,8 @@
                     <div class="row post-it-container" [ngStyle]="{'max-width': myMaxWith }" cdkDropList
                       [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
 
-                      <mat-card class="mat-elevation-z4 post-card"  (click)="openDialog(item, 'edit')"                         
+                      <mat-card class="mat-elevation-z4 post-card"  
+                                                 
                         cdkDrag cdkDragLockAxis="xy" *ngFor="let item of conceptData.concepts; let i = index;">
 
                         <!-- TITLE -->
@@ -130,16 +131,12 @@
 
                         <!-- HTML-CONTENT -->
 
-                        <mat-card-content class="post-content">
+                        <mat-card-content class="post-content" (click)="openDialog(item, 'edit')"  >
                           <div [innerHTML]="item.html"></div>
                         </mat-card-content>
 
-                        <mat-card-actions fxLayoutAlign="end end" *ngIf="isDeleteButon">
-                          <!-- <button mat-mini-fab class="post-button" color="primary">
-                            <mat-icon style="font-size: 18px;">create</mat-icon>
-                          </button> -->
-                          <mat-icon class="deleteButton" (click)="openDialog(item, 'delete')" >cancel</mat-icon>
-                        </mat-card-actions>
+                        <mat-icon class="deleteButton" (click)="openDialog(item, 'delete')" >cancel</mat-icon>
+                       
 
                       </mat-card>
 
@@ -163,22 +160,20 @@
                         {{item.Name}}
                       </span>
                     </div>
-
-                    <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form"
-                      fxLayoutAlign="center center">
-
-                      <mat-form-field style="width: 550px;">
-                        <input matInput type="New Name" placeholder="New Name" formControlName="name"
-                          [(ngModel)]="newName">
-                      </mat-form-field>
-                      <button (click)="submitNewName(); newName=''" mat-button color="success" aria-label="icon"
-                        style="outline: none;">
-                        SUBMIT
-                      </button>
-                    </form>
-
                   </div>
 
+                  <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form"
+                  fxLayoutAlign="center center">
+
+                  <mat-form-field style="width: 550px;">
+                    <input matInput type="New Name" placeholder="New Name" formControlName="name"
+                      [(ngModel)]="newName">
+                  </mat-form-field>
+                  <button (click)="submitNewName(); newName=''" mat-button color="success" aria-label="icon"
+                    style="outline: none;">
+                    SUBMIT
+                  </button>
+                </form>
 
                 </div>
                 <div *ngIf="true">
