--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -94,7 +94,7 @@
               <!-- Brandstomr and Names toolbar -->
               <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
                 <div class="row">
-                  <div class="col" style="color: white; font-size: 40px;font-family: Arial">
+                  <div class="col brandstorm" style="color: white; font-size: 40px;font-family: Arial">
                     Brandstorm
                   </div>
                   <div class="col" (click)="toggleNamebox()"
@@ -111,15 +111,17 @@
               <div class="row">
                 <div class="col-md-8">
 
-                  <div class="presentation-box" style="overflow-y: scroll;" >
+                  <div class="presentation-box " style="overflow-y: scroll;" >
 
                     <!-- POST_REPEATER -->
-                    <div class="row post-it-container" [ngStyle]="{'max-width': myMaxWith }" cdkDropList
-                      [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
+                    <div class="row post-it-container " [ngStyle]="{'max-width': myMaxWith }" cdkDropList 
+                      [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)" >
+                      <div class="post-it-list"  *ngFor="let item of conceptData.concepts; let i = index;"> 
 
+                     
                       <mat-card class="mat-elevation-z4 post-card"  
                                                  
-                        cdkDrag cdkDragLockAxis="xy" *ngFor="let item of conceptData.concepts; let i = index;">
+                        cdkDrag cdkDragLockAxis="xy" >
 
                         <!-- TITLE -->
                         <mat-card-title>
@@ -139,7 +141,7 @@
                        
 
                       </mat-card>
-
+                    </div>
                     </div>
 
                   </div>
