--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
-
+@import '~animate.css/animate.min';
 
 
 // THIS --> https://material.io/design/color/#tools-for-picking-colors
